--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,16 @@
 version: "3.3"
 
 services:
-  sssai:
-    depends_on:
-      - deepstack
+  iamdman-sssai:
     build:
       context: .
       args:
-        TZ: Australia/Sydney
-    image: sssai:latest
-    container_name: ssaai
+        TZ: America/New_York
+    image: iamdman/sssai:latest
+    container_name: iamdman-ssaai
     volumes:
       # mkdir -p ./data/captures
-      - ./data/captures:/captureDir
-      - ./cameras.json:/config/cameras.json:ro
-      - ./settings.json:/config/settings.json:ro
+      - /volume1/docker/sssAI/captureDir:/captureDir
+      - /volume1/docker/sssAI/config:/config
     ports:
       - "4242:80"
-
-  deepstack:
-    image: deepquestai/deepstack
-    container_name: ssaai_deepstack
-    env_file:
-      - 'deepstack.env'
-    volumes:
-      # mkdir -p ./data/deepstack
-      - ./data/deepstack:/datastore
-# Exposing this port on the host is not necessary but can be useful for testing
-#    ports:
-#      - "5083:5000"
